<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Inspection_Control_Register" Id="{fb97b990-79ad-48cb-b47b-df22082575c9}">
    <Declaration><![CDATA[TYPE Inspection_Control_Register :
STRUCT
	Enable_Results_Buffering : BIT;
	Acknowledge_Inspection_Results : BIT;
	Extended_User_Data_Set : BIT;
	Execute_Command : BIT;
	Clear_Error : BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>